--- a/public/views/home.html
+++ b/public/views/home.html
@@ -3,11 +3,14 @@
 <section ng-controller="MainController" >
 <h1 class='col-md-12 text-center' >IoT smartbin dashboard</h1 >
   <div class=row ng-repeat="bins in smartbins | groupBy:3">
-     <div class="col-xs-3 letter-box login-form-bg" ng-repeat="bin in bins" >
+     <div id="grid" class="col-xs-3 letter-box login-form-bg" ng-repeat="bin in bins" >
                   <h1> ID: {{bin.ID}} </h1>
                    Location: {{bin.location}}<br>
                    Distance: {{bin.distance}}<br>
                    Distance previous: {{bin.distanceprev}}
+                   <div ng-hide="bin.full">
+                     vol
+                   </div>
     </div>
   </div>
 
