--- a/public/css/style.css
+++ b/public/css/style.css
@@ -51,5 +51,13 @@ body{
   border-color: white;
   margin: 2%;
   text-align: center;
+}
 
+.warningfull {
+  background-color: red;
+  border: 15px solid;
+  border-radius: 15px;
+  border-color: red;
+  margin: 2%;
+  text-align: center;
 }
