changed warning when full

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -3,7 +3,7 @@
 <section ng-controller="MainController" >
 <h1 class='col-md-12 text-center' >IoT smartbin dashboard</h1 >
   <div class=row ng-repeat="bins in smartbins | groupBy:3">
-     <div id="grid" class="col-xs-3 letter-box login-form-bg" ng-class="{warningfull: !bin.full}" ng-repeat="bin in bins" >
+     <div id="grid" class="col-xs-3 letter-box login-form-bg" ng-class="{warningfull: bin.full}" ng-repeat="bin in bins" >
        <div >
                   <h1> ID: {{bin.ID}} </h1>
                    Location: {{bin.location}}<br>
