added base code for login

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -18,6 +18,7 @@
     <script src="libs/angular/angular.js"></script>
     <script src="libs/angular-route/angular-route.js"></script>
     <script src="libs/angular-filter/dist/angular-filter.js"></script>
+    <script src="libs/bootstrap/dist/js/bootstrap.min.js"></script>
 
 
     <!-- ANGULAR CUSTOM -->
@@ -25,8 +26,10 @@
     <script src="js/appRoutes.js"></script>
 
 
+
     <!--CONTROLLERS-->
     <script src="js/controllers/MainCtrl.js"></script>
+    <script src="js/controllers/DashboardCtrl.js"></script>
 
 
 
