--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,18 +1,46 @@
 <!-- public/views/home.html -->
 
-<section ng-controller="MainController" >
-<h1 class='col-md-12 text-center' >IoT smartbin dashboard</h1 >
-  <div class=row ng-repeat="bins in smartbins | groupBy:3">
-     <div id="grid" class="col-xs-3 letter-box login-form-bg" ng-class="{warningfull: bin.full}" ng-repeat="bin in bins" >
-       <div >
-                  <h1> ID: {{bin.ID}} </h1>
-                   Location: {{bin.location}}<br>
-                   Distance: {{bin.distance}}<br>
-                   Distance previous: {{bin.distanceprev}}
+<section ng-controller="MainController">
 
-        </div>
-    </div>
-  </div>
+          <h1 class='col-md-12 text-center'>Login</h1>
+          <div class='col-xs-12 col-sm-offset-2 col-sm-8 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6 login-form-bg'>
 
+          <div growl></div>
+
+        <form ng-submit="login()" method="post"
+              style="margin-top:30px;">
+
+                <div class="form-group">
+                  <div class="input-group text-center input-group-lg">
+                     <span class="input-group-addon" id="basic-addon1">
+                        <i class="glyphicon glyphicon-envelope"></i>
+                     </span>
+                      <input type="text"
+                             class="form-control"
+                             placeholder="user"
+                             ng-model="user"></input>
+                  </div>
+                </div>
+
+          <div class="form-group">
+              <div class="input-group text-center input-group-lg">
+                <span class="input-group-addon" id="basic-addon1">
+                   <i class="glyphicon glyphicon-asterisk"></i>
+                </span>
+                  <input type="password"
+                         class="form-control"
+                         placeholder="Paswoord"
+                         ng-model="password"></input>
+              </div>
+            </div>
+
+            <div class="form-group text-center">
+              <button type="submit" class="btn btn-default btn-lg btn-block">Log in</button>
+            </div>
+
+        </form>
+
+
+</div>
 
 </section>
