--- a/public/views/index.html
+++ b/public/views/index.html
@@ -24,6 +24,8 @@
     <!-- ANGULAR CUSTOM -->
     <script src="js/app.js"></script>
     <script src="js/appRoutes.js"></script>
+    <script src="factories/httpInterceptor.js"></script>
+
 
 
 
