--- a/public/views/index.html
+++ b/public/views/index.html
@@ -25,6 +25,8 @@
     <script src="js/app.js"></script>
     <script src="js/appRoutes.js"></script>
     <script src="factories/httpInterceptor.js"></script>
+    <script src="modules/growl.js"></script>
+
 
 
 
