--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -1,4 +1,5 @@
 <section ng-controller="DashboardController" >
+  <button ng-click="logout()"><span class="glyphicon glyphicon-log-out"></span> Log uit</button>
 <h1 class='col-md-12 text-center' >IoT smartbin dashboard</h1 >
   <div class=row ng-repeat="bins in smartbins | groupBy:3">
      <div id="grid" class="col-xs-3 letter-box login-form-bg" ng-class="{warningfull: bin.full}" ng-repeat="bin in bins" >
