--- a/public/views/index.html
+++ b/public/views/index.html
@@ -34,6 +34,7 @@
     <!--CONTROLLERS-->
     <script src="js/controllers/MainCtrl.js"></script>
     <script src="js/controllers/DashboardCtrl.js"></script>
+    <script src="js/controllers/EditCtrl.js"></script>
 
 
 
