--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -1,13 +1,14 @@
 <section ng-controller="DashboardController" >
-  <button ng-click="logout()"><span class="glyphicon glyphicon-log-out"></span> Log uit</button>
+  <button class="btn btn-default btn-sm" ng-click="logout()"><span class="glyphicon glyphicon-log-out"></span> Logout</button>
 <h1 class='col-md-12 text-center' >IoT smartbin dashboard</h1 >
-  <div class=row ng-repeat="bins in smartbins | groupBy:3">
-     <div id="grid" class="col-xs-3 letter-box login-form-bg" ng-class="{warningfull: bin.full}" ng-repeat="bin in bins" >
+  <div class="row col-xs-12 col-sm-offset-1 col-sm-11 col-md-offset-1 col-md-11 col-lg-offset-1 col-lg-11" ng-repeat="bins in smartbins | groupBy:3">
+     <div  class="col-xs-3 dashboard-form-bg" ng-class="{warningfull: bin.full}" ng-repeat="bin in bins" >
        <div >
+           <button ng-click="edit(bin.ID)" class="btn-md buttonedit"><span class="glyphicon glyphicon-pencil"></span> </button>
                   <h1> ID: {{bin.ID}} </h1>
                    Location: {{bin.location}}<br>
                    Distance: {{bin.distance}}<br>
-                   Distance previous: {{bin.distanceprev}}
+                   Description: {{bin.description}}
 
         </div>
     </div>
