added bootbox for confirm delete popup

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -20,6 +20,9 @@
     <script src="libs/angular-filter/dist/angular-filter.js"></script>
     <script src="libs/bootstrap/dist/js/bootstrap.min.js"></script>
 
+    <script src="libs/bootbox/bootbox.js"></script> <!--alert-->
+    <script src="libs/ngBootbox/dist/ngBootbox.min.js"></script><!--alert-->
+
 
     <!-- ANGULAR CUSTOM -->
     <script src="js/app.js"></script>
