--- a/public/views/edit.html
+++ b/public/views/edit.html
@@ -25,7 +25,7 @@
  <div class="form-group">
    <div class="col-sm-offset-2 col-sm-10">
      <button ng-click="editDescription()" class="btn btn-default btn-sm">Save New Description</button>
-     <button class="btn btn-danger btn-sm" style="float:right;" ng-bootbox-title="Smartbin ID:{{smartbin.ID}}" ng-bootbox-custom-dialog="Are you sure you want to delete this smartbin?" ng-bootbox-buttons="customButtonDelete">Delete Smartbin</button>
+     <button class="btn btn-danger btn-sm" style="float:right;" ng-bootbox-title="Delete Smartbin" ng-bootbox-custom-dialog="Are you sure you want to delete this smartbin?" ng-bootbox-buttons="customButtonDelete">Delete Smartbin</button>
    </div>
 
   </form>
