--- a/public/views/edit.html
+++ b/public/views/edit.html
@@ -1,5 +1,6 @@
 <section ng-controller="EditController" >
   <button class="btn btn-default btn-sm" ng-click="logout()"><span class="glyphicon glyphicon-log-out"></span> Logout</button>
+    <a href="/Dashboard" class="btn btn-default btn-sm">Dashboard</button>
 <h1 class='col-md-12 text-center' >Edit smartbin {{smartbin.ID}}</h1 >
   <div class='col-xs-12 col-sm-offset-2 col-sm-8 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6 edit-form-bg'>
 
